Update application.html file to include script tag for warehouse.js and pseudocode

--- a/AllMyBooksArePacked/source/application.html
+++ b/AllMyBooksArePacked/source/application.html
@@ -4,8 +4,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="js/box.js"></script>
     <script src="js/book.js"></script>
+    <script src="js/warehouse.js"></script>
     <script src="js/webscraper.js"></script>
     <script src="js/application.js"></script>
     <title> Beatrice </title>
   </head>
 </html>
+
+<!-- Scrape the websites, create book objects from these websites and store the books in the warehouse object -->
+<!-- Create an algorithm to sort the book objects correctly into box objects -->
+<!-- display all of the box objects in one json object and display that in the application.html file -->
+
