Fix script references in application.html

--- a/AllMyBooksArePacked/source/application.html
+++ b/AllMyBooksArePacked/source/application.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="js/box.js"></script>
-    <script src="js/book.js"></script>
-    <script src="js/warehouse.js"></script>
-    <script src="js/webscraper.js"></script>
-    <script src="js/application.js"></script>
+    <script src="box.js"></script>
+    <script src="book.js"></script>
+    <script src="warehouse.js"></script>
+    <script src="webscraper.js"></script>
+    <script src="application.js"></script>
     <title> Beatrice </title>
   </head>
 </html>
