Change page title

--- a/AllMyBooksArePacked/source/application.html
+++ b/AllMyBooksArePacked/source/application.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="box.js"></script>
     <script src="book.js"></script>
     <script src="warehouse.js"></script>
     <script src="webscraper.js"></script>
     <script src="application.js"></script>
-    <title> Beatrice </title>
+    <title> AllMyBooksArePacked </title>
   </head>
 </html>
 
