--- a/AllMyBooksArePacked/index.html
+++ b/AllMyBooksArePacked/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="box.js"></script>
-    <script src="book.js"></script>
-    <script src="warehouse.js"></script>
-    <script src="webscraper.js"></script>
-    <script src="application.js"></script>
+    <script src="js/box.js"></script>
+    <script src="js/book.js"></script>
+    <script src="js/warehouse.js"></script>
+    <script src="js/webscraper.js"></script>
+    <script src="js/application.js"></script>
     <title> AllMyBooksArePacked </title>
   </head>
 </html>
