--- a/AllMyBooksArePacked/index.html
+++ b/AllMyBooksArePacked/index.html
@@ -10,6 +10,9 @@
     <script src="js/application.js"></script>
     <title> AllMyBooksArePacked </title>
   </head>
+  <body>
+      
+  </body>
 </html>
 
 <!-- Scrape the websites, create book objects from these websites and store the books in the warehouse object -->
