--- a/AllMyBooksArePacked/data/book9.html
+++ b/AllMyBooksArePacked/data/book9.html
@@ -5755,7 +5755,7 @@ For a <span style="color: #990000; font-size: 1.2em; letter-spacing: -1px; font-
 
 
 <h1 class="parseasinTitle ">
-<span id="btAsinTitle"  >A New Kind of Science <span  style="text-transform: capitalize; font-size: 16px;">[Hardcover]</span></span>
+<span id="btAsinTitle"  >A New Kind of Science <span  style="text-transform: capitalize; font-size: 16px;">[Hardcover]</span></san>
 
 
 </h1>
