--- a/AllMyBooksArePacked/client/index.html
+++ b/AllMyBooksArePacked/client/index.html
@@ -10,35 +10,32 @@
     <!-- Bootstrap -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Custom styles for cover template -->
-
   </head>
   <body>
+
     <div class="container">
       <div class="row">
-        <div class="col-md-6">.col-md-6</div>
+        <div class="col-md-6">
+          <form class="form-inline">
+            <div class="form-group">
+              <input type="number" class="form-control" id="numBoxes" placeholder="# Boxes">
+            </div>
+            <button type="submit" class="btn btn-default" id="packButton">Pack Books</button>
+          </form>
+        </div>
         <div class="col-md-6">
           <button type="button" class="btn btn-primary" id="getBooks">Get Books</button>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-6">.col-md-6</div>
+        <div class="col-md-6" id="boxesDiv">
+        </div>
         <div class="col-md-6" id="books">
         </div>
       </div>
     </div>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <!--<script src="./bower_components/jquery/dist/jquery.min.js"></script> -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="client/app.js"></script>
   </body>
