--- a/Identity/index.html
+++ b/Identity/index.html
@@ -3,7 +3,9 @@
   <head>
     <title>Datafiniti Authentication</title>
   </head>
-  <body>
+  <body style='margin:0'>
+    <div id='root'>
+    </div>
     <script src="/dist/bundle.js"></script>
   </body>
 </html>
