--- a/Identity/index.html
+++ b/Identity/index.html
@@ -6,6 +6,6 @@
   <body style='margin:0'>
     <div id='root'>
     </div>
-    <script src="/dist/bundle.js"></script>
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
