--- a/Identity/index.html
+++ b/Identity/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <title>Datafiniti Authentication</title>
+    <link rel="stylesheet" type="text/css" href="/dist/style.css"/>
   </head>
   <body style='margin:0'>
     <div id='root'>
     </div>
-    <script src="./dist/bundle.js"></script>
+    <script src="/dist/bundle.js"></script>
   </body>
 </html>
