--- a/Identity/index.html
+++ b/Identity/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Datafiniti Authentication</title>
     <link rel="stylesheet" type="text/css" href="/dist/style.css"/>
+    <link href="https://fonts.googleapis.com/css?family=BioRhyme|Bungee" rel="stylesheet">
   </head>
   <body style='margin:0'>
     <div id='root'>
