--- a/Identity/app/index.html
+++ b/Identity/app/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset='utf-8'>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400|Raleway:400,500" rel="stylesheet">
 
 	</head>
 
